--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/jagui.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
